Stop infoBlock images getting squished in iOS9
https://github.com/clearleft/clearfractal/issues/109

--- a/assets/sass/components/info-block.scss
+++ b/assets/sass/components/info-block.scss
@@ -11,6 +11,8 @@
     line-height: px2rem(24px);
 }
 .InfoBlock-image {
+    flex-shrink: 0;
+    flex-basis: auto;
     margin-right: px2rem(16px);
     margin-bottom: px2rem(24px);
 }
